<resources>
    <string name="app_name">Time Table Generator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_admin_login">Admin Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="admin_login">Admin Login</string>
    <string name="timetables">Timetables</string>
    <string name="faculty_contact">Faculty Contact</string>
    <string name="cr_contact">CR Contact</string>
    <string name="help">Help</string>
    <string name="about_us">About Us</string>
    <string name="time_table">Time Table</string>
</resources>