<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.timetablegenerator.Fragments.AdminLoginFragment"
        android:label="@string/admin_login"
        tools:layout="@layout/fragment_admin_login" />

    <fragment
        android:id="@+id/nav_tt"
        android:name="com.example.timetablegenerator.Fragments.TimeTableFragment"
        android:label="@string/time_table"
        tools:layout="@layout/fragment_time_table" />

    <fragment
        android:id="@+id/nav_faculty_contact"
        android:name="com.example.timetablegenerator.Fragments.FacultyContactFragment"
        android:label="@string/faculty_contact"
        tools:layout="@layout/fragment_faculty_contact" />

    <fragment
        android:id="@+id/nav_c_r_contact"
        android:name="com.example.timetablegenerator.Fragments.CRContactFragment"
        android:label="@string/cr_contact"
        tools:layout="@layout/fragment_c_r_contact" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.timetablegenerator.Fragments.HelpFragment"
        android:label="@string/help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.example.timetablegenerator.Fragments.AboutUsFragment"
        android:label="@string/about_us"
        tools:layout="@layout/fragment_about_us" />

</navigation>