<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/admin_login"
            android:title="@string/admin_login" />
        <item
            android:id="@+id/nav_tt"
            android:icon="@drawable/tt"
            android:title="@string/timetables" />
        <item
            android:id="@+id/nav_faculty_contact"
            android:icon="@drawable/faculty"
            android:title="@string/faculty_contact" />
        <item
            android:id="@+id/nav_c_r_contact"
            android:icon="@drawable/cr_contact"
            android:title="@string/cr_contact" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/about"
            android:title="@string/about_us" />
    </group>


    <!--[Old code]-->
    <!--<group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_admin_login"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/menu_admin_login"/>
    </group>-->

</menu>